Fix minor layout issues

--- a/events/static/events/css/raffle.scss
+++ b/events/static/events/css/raffle.scss
@@ -30,7 +30,7 @@
   }
 
   .awarded-ticket {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     background-color: $yellow-bg;
     display: inline-block;
     padding: .4rem;
